OpenNHRP ChangeLog                   http://sourceforge.net/projects/opennhrp
=============================================================================

Detailed changelog is available via Git history via web:
http://opennhrp.git.sf.net/git/gitweb.cgi?p=opennhrp;a=blob;f=NEWS;hb=HEAD

-----------------------------------------------------------------------------
 opennhrp 0.13 - released 25/Dec/2011
-----------------------------------------------------------------------------
 - feature: add admin "interfaces show" command to display information about
   the interface cache
 - feature: support GRE interface binding changes (update gre nbma address
   properly, and purge peer cache) to support dual ISP setups with failover
 - fix: send registration reply even when all bindings are rejected
 - fix: fix really the holding-time to apply to shortcut-target
 - fix: fix hop count handling
 - fix: various memory leaks fixed
 - fix: fix memory corruption in the hlist structure (would be visible when
   opennhrp is acting as NHS with heavy traffic)

-----------------------------------------------------------------------------
 opennhrp 0.12.3 - released 19/Aug/2011
-----------------------------------------------------------------------------
 - feature: export reason why peer-down trigger was executed; and implement
   'lowerdown' opennhrpctl command for racoon hook to indicate that the
   IPsec SA has died (opennhrp-script can then avoid the unneccessary and
   possibly harmful call to racoonctl)
 - fix: route NHRP queries always via NHS (because ipsec initial-contact
   mechanism for purging dead IPsec SAs triggers after NHRP rediscovery,
   and if remote peer was rebooted, the direct link might be dead)
 - fix: don't negative cache entries on timeout (timeout is indication of
   temporary error: none of NHS' is reachable)
 - fix: don't reply to kernel's ARP queries using local route entries.
   this also prevents bad shortcut-routes if the local GRE prefix is